[gd_scene load_steps=22 format=3 uid="uid://cyftkv1yfjt8i"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_iqq43"]
[ext_resource type="Texture2D" uid="uid://b72iyq0g6wp12" path="res://Assets/Hero/attack/hero_attack0001.png" id="2_g3q7n"]
[ext_resource type="Texture2D" uid="uid://bw7kb1k2ywbly" path="res://Assets/enemy01/death/enemy01_death0001.png" id="3_qrsr4"]
[ext_resource type="Texture2D" uid="uid://coxaly1iyrlc8" path="res://Assets/enemy01/death/enemy01_death0006.png" id="4_urbkb"]
[ext_resource type="Texture2D" uid="uid://brv6hv8tlyy5h" path="res://Assets/enemy01/death/enemy01_death0021.png" id="5_fgdae"]
[ext_resource type="Texture2D" uid="uid://d1pkgpfdi7qxm" path="res://Assets/enemy01/walk/enemy01_walk0008.png" id="6_3iiwa"]
[ext_resource type="Texture2D" uid="uid://bd0gbxw8yf5tv" path="res://Assets/enemy01/walk/enemy01_walk0005.png" id="7_swuv3"]
[ext_resource type="Texture2D" uid="uid://bodgtg2r7qmnu" path="res://Assets/enemy01/death/enemy01_death0009.png" id="8_hnast"]
[ext_resource type="Texture2D" uid="uid://i32dcocaexou" path="res://Assets/enemy01/death/enemy01_death0002.png" id="9_frdtw"]
[ext_resource type="Texture2D" uid="uid://carrdcptkqwjb" path="res://Assets/Hero/hit/hero_hit0002.png" id="10_3w7nu"]
[ext_resource type="Texture2D" uid="uid://d06tdkbryt31c" path="res://Assets/Hero/attack/hero_attack0004.png" id="11_885hm"]
[ext_resource type="Texture2D" uid="uid://h3jkmmbkvjys" path="res://Assets/Hero/run/hero_run0007.png" id="12_17d6l"]
[ext_resource type="Texture2D" uid="uid://bkvqlwotf58ao" path="res://Assets/Hero/death/hero_death0010.png" id="13_tdg2u"]
[ext_resource type="Texture2D" uid="uid://euvt4wxb6lg2" path="res://Assets/Hero/jump/hero_jump0006.png" id="14_tso05"]
[ext_resource type="Texture2D" uid="uid://bwpkccbrxnuj6" path="res://Assets/Hero/jump/hero_jump0003.png" id="15_7wqce"]
[ext_resource type="Texture2D" uid="uid://j6nnip68130a" path="res://Assets/UI/upgrade.png" id="15_sra14"]
[ext_resource type="Texture2D" uid="uid://pc0gl2jojqpp" path="res://Assets/UI/Settings_title.png" id="16_qoyv0"]
[ext_resource type="Texture2D" uid="uid://dlbtkw3ridrnc" path="res://Assets/UI/sound.png" id="16_vukt8"]
[ext_resource type="Texture2D" uid="uid://cllx1a6tfu66k" path="res://Assets/UI/sound_off.png" id="17_x8878"]
[ext_resource type="Texture2D" uid="uid://3mlcqparqo7m" path="res://Assets/UI/faq.png" id="20_lgrd5"]

[sub_resource type="LabelSettings" id="LabelSettings_glib1"]
font_size = 35
font_color = Color(0.290196, 0.215686, 0.266667, 1)

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_iqq43")

[node name="ColorRect" type="ColorRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847475, 0.977984, 0.916641, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 594.0
offset_top = 214.0
offset_right = 744.0
offset_bottom = 385.0
rotation = -0.390954
texture = ExtResource("2_g3q7n")
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 161.0
offset_top = 485.0
offset_right = 311.0
offset_bottom = 656.0
rotation = 0.652753
texture = ExtResource("3_qrsr4")

[node name="TextureRect3" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 1374.0
offset_top = 291.0
offset_right = 1524.0
offset_bottom = 462.0
rotation = 0.652753
texture = ExtResource("4_urbkb")

[node name="TextureRect4" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 181.0
offset_top = -32.0
offset_right = 331.0
offset_bottom = 139.0
rotation = 0.652753
texture = ExtResource("5_fgdae")

[node name="TextureRect5" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 370.0
offset_top = 273.0
offset_right = 520.0
offset_bottom = 444.0
rotation = 0.652753
texture = ExtResource("6_3iiwa")

[node name="TextureRect6" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 1243.0
offset_top = 67.9999
offset_right = 1393.0
offset_bottom = 239.0
rotation = -0.164061
texture = ExtResource("7_swuv3")
flip_h = true

[node name="TextureRect7" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 220.0
offset_top = 499.0
offset_right = 370.0
offset_bottom = 670.0
rotation = -0.652753
texture = ExtResource("3_qrsr4")

[node name="TextureRect8" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 474.0
offset_top = 29.0
offset_right = 624.0
offset_bottom = 200.0
rotation = 0.652753
texture = ExtResource("8_hnast")

[node name="TextureRect9" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 902.0
offset_top = 410.0
offset_right = 1052.0
offset_bottom = 581.0
rotation = 1.79594
texture = ExtResource("9_frdtw")

[node name="TextureRect10" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 1422.0
offset_top = 481.0
offset_right = 1572.0
offset_bottom = 652.0
rotation = 0.652753
texture = ExtResource("10_3w7nu")

[node name="TextureRect11" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 86.0
offset_top = 223.0
offset_right = 236.0
offset_bottom = 394.0
rotation = -0.490438
texture = ExtResource("11_885hm")

[node name="TextureRect12" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 1268.0
offset_top = 471.0
offset_right = 1418.0
offset_bottom = 642.0
rotation = 1.14319
texture = ExtResource("12_17d6l")

[node name="TextureRect13" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 1149.0
offset_top = 78.0
offset_right = 1299.0
offset_bottom = 249.0
rotation = 0.162316
texture = ExtResource("13_tdg2u")

[node name="TextureRect14" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 964.0
offset_top = 504.0
offset_right = 1116.0
offset_bottom = 662.0
rotation = 0.326377
texture = ExtResource("14_tso05")

[node name="TextureRect15" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.54902)
texture_filter = 1
layout_mode = 0
offset_left = 554.0
offset_top = 442.0
offset_right = 704.0
offset_bottom = 613.0
rotation = 0.652753
texture = ExtResource("15_7wqce")

[node name="TextureRectSettings" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 520.0
offset_top = 50.0
offset_right = 1070.0
offset_bottom = 237.0
texture = ExtResource("16_qoyv0")

[node name="TextureButtonBack" type="TextureButton" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.721569)
layout_mode = 0
offset_left = 710.0
offset_top = 700.0
offset_right = 904.0
offset_bottom = 850.0
rotation = 4.71239
texture_normal = ExtResource("15_sra14")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonMusic" type="TextureButton" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.721569)
layout_mode = 0
offset_left = 450.0
offset_top = 270.0
offset_right = 635.0
offset_bottom = 465.0
texture_normal = ExtResource("16_vukt8")
texture_pressed = ExtResource("17_x8878")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonAbout" type="TextureButton" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.721569)
layout_mode = 0
offset_left = 920.0
offset_top = 270.0
offset_right = 1105.0
offset_bottom = 465.0
texture_normal = ExtResource("20_lgrd5")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 334.0
offset_top = 33.0
offset_right = -326.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847059, 0.976471, 0.917647, 1)

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.446
anchor_top = -0.059
anchor_right = -0.446
anchor_bottom = -0.059
offset_left = 442.456
offset_top = 57.102
offset_right = 1378.46
offset_bottom = 598.102
text = "Aim and Shoot: Use your button or touch controls  to
                  aim the apple at the zombie doctor.
Hit to Clear: Successfully hit  the zombie doctors with 
                    the apples  to complete the level.
Avoid Obstacles: Watch out for barriers and tricky 
                 angles that make your shots harder.
Stay Safe: Dodge the zombie doctor's counterattacks
                               to avoid losing health.
Progress and Win: Clear all levels by hitting zombie
                                     and staying alive!"
label_settings = SubResource("LabelSettings_glib1")

[node name="TouchScreenButton" type="TouchScreenButton" parent="ColorRect2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-5, -11)
scale = Vector2(5, 2.947)
texture_normal = ExtResource("17_x8878")

[connection signal="pressed" from="ColorRect/TextureButtonBack" to="." method="_on_texture_button_back_pressed"]
[connection signal="pressed" from="ColorRect/TextureButtonMusic" to="." method="_on_texture_button_music_pressed"]
[connection signal="pressed" from="ColorRect/TextureButtonAbout" to="." method="_on_texture_button_about_pressed"]
[connection signal="released" from="ColorRect2/TouchScreenButton" to="." method="_on_touch_screen_button_released"]
